test/langtools/tools/javac/datum/DatumShouldDeclareAtLeastOneFieldTest.out
DatumShouldDeclareAtLeastOneFieldTest.java:8:33: compiler.err.record.must.declare.at.least.one.field
DatumShouldDeclareAtLeastOneFieldTest.java:10:24: compiler.err.record.must.declare.at.least.one.field
2 errors
